[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacura-visualization"
version = "0.1.0"
description = "Auto visualization library for Datacura with domain rules."
authors = [{name = "Datacura Team"}]
dependencies = ["pandas", "matplotlib"]
